# sciote

./: .gitignore  README.md  config.py  db.py  f_measure.py  main.py  metrics.py  pyproject.toml  requirements.txt
ai/: config.py  model.py  model2.py  tokenizer.py
data/: example_labels.txt  example_messages.txt  extractor.py  parser.py  parser_html.py
src/: config.py  db.py  f_measure.py  fancy_stuff.py  helpers.py  main.py  metrics.py  parser.py  sciote.py
src/ai/: model.py  model2.py  tokenizer.py
src/data/: parser.py  parser_html.py
src/network/: config.py  trainer.py
src/network/models/: __init__.py  mlp.py  sepcnn.py
src/web/: app.py
src/web/static/: style.css
src/web/templates/: index.html  predict.html  status.html  train.html
tests/: test_sciote.py
web/: app.py  export_model.py
web/static/: new-style.css  style.css
web/templates/: index.html  new_index.html  status.html  wrap.html
